# lpeg
add_subdirectory(${SKYNET_ROOT_PATH}/luaclib-src-3rd/lua-lpeg)
# lua-md5
add_subdirectory(${SKYNET_ROOT_PATH}/luaclib-src-3rd/lua-md5)
# lua-lfs
add_subdirectory(${SKYNET_ROOT_PATH}/luaclib-src-3rd/lua-lfs)
# lua-iconv
add_subdirectory(${SKYNET_ROOT_PATH}/luaclib-src-3rd/lua-iconv)
# lua-cjson
add_subdirectory(${SKYNET_ROOT_PATH}/luaclib-src-3rd/lua-cjson)

# lua-pbc
#add_subdirectory(${SKYNET_ROOT_PATH}/luaclib-src-3rd/lua-pbc)
#add_subdirectory(${SKYNET_ROOT_PATH}/luaclib-src-3rd/lua-pbc/binding)

# sproto support
add_subdirectory(${SKYNET_ROOT_PATH}/luaclib-src-3rd/sproto)
