# target shared lib (bson.so)
ADD_LIBRARY(bson MODULE 
    "${SKYNET_ROOT_PATH}/skynet-luaclib/lua-bson/lua-bson.c"
)
SET_TARGET_PROPERTIES(bson
    PROPERTIES
    PREFIX ""
    ARCHIVE_OUTPUT_DIRECTORY "${SKYNET_LUACLIB_BIN_PATH}"
    LIBRARY_OUTPUT_DIRECTORY "${SKYNET_LUACLIB_BIN_PATH}"
)
TARGET_LINK_LIBRARIES(bson liblua)
