# target shared lib (epoll.so)
ADD_LIBRARY(epoll MODULE 
    "${SKYNET_ROOT_PATH}/skynet-luaclib/lua-epoll/epoll.c"
)
SET_TARGET_PROPERTIES(epoll
    PROPERTIES
    PREFIX ""
    ARCHIVE_OUTPUT_DIRECTORY "${SKYNET_LUACLIB_BIN_PATH}"
    LIBRARY_OUTPUT_DIRECTORY "${SKYNET_LUACLIB_BIN_PATH}"
)
TARGET_LINK_LIBRARIES(epoll liblua)
