# source file list
AUX_SOURCE_DIRECTORY("${SKYNET_ROOT_PATH}/skynet-luaclib/lua-lfs/src" LUA_LFS_SRC)

# target shared lib
ADD_LIBRARY(lfs MODULE  ${LUA_LFS_SRC})
SET_TARGET_PROPERTIES(lfs
    PROPERTIES
    PREFIX ""
    ARCHIVE_OUTPUT_DIRECTORY "${SKYNET_LUACLIB_BIN_PATH}"
    LIBRARY_OUTPUT_DIRECTORY "${SKYNET_LUACLIB_BIN_PATH}"
)
TARGET_LINK_LIBRARIES(lfs liblua)
